--- a/public/style.css
+++ b/public/style.css
@@ -759,3 +759,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2024-04-24T13:19:10 – ZwLykYh24gqHpxbPFutu */
 /* 2024-06-15T05:22:55 – Xbi7FtDWKPmbVHG1QjUn */
 /* 2024-06-19T00:40:13 – pUHVrcfsvEO7O5lZmsu4 */
+/* 2024-07-01T17:50:33 – yTt8uSu1zw0EyWSXZBIE */
