--- a/public/css/style.css
+++ b/public/css/style.css
@@ -146,3 +146,4 @@
 /* 2023-10-11T15:37:45 – RXzvCrpeEs4zFBdaOd04 */
 /* 2023-12-11T23:52:11 – Kfzx5URXHG8bH0ayZXTc */
 /* 2023-12-30T11:10:53 – NZrjxsiMaGb1gZEOB7ts */
+/* 2024-08-13T11:22:48 – 9od9QKYn5UVP8oAoSUmR */
