--- a/public/css/style.css
+++ b/public/css/style.css
@@ -147,3 +147,4 @@
 /* 2023-12-11T23:52:11 – Kfzx5URXHG8bH0ayZXTc */
 /* 2023-12-30T11:10:53 – NZrjxsiMaGb1gZEOB7ts */
 /* 2024-08-13T11:22:48 – 9od9QKYn5UVP8oAoSUmR */
+/* 2024-08-26T11:52:15 – YzqkBBBiRHlxMrTmou9M */
