--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,3 +7,4 @@
 /* 2023-03-26T09:41:41 – xuI8u3cPLOJZuP1IqqKP */
 /* 2023-05-03T15:34:16 – 9jR2amcwZskrqSaHrxB6 */
 /* 2024-05-05T17:36:04 – mgoO31GQFlrbatxWX4AH */
+/* 2024-09-07T20:52:54 – C0tGAeeoCNQujdFQe9Ll */
