--- a/public/style.css
+++ b/public/style.css
@@ -686,3 +686,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2023-04-23T19:39:54 – PV4hD5AD3pad0ijGntE8 */
 /* 2024-02-24T16:41:05 – yMQWHFohBMv1rCrQrvpz */
 /* 2024-04-23T23:39:50 – VLxOJsutndx2L5Mxi0bb */
+/* 2024-09-14T09:48:27 – K0ivlxwuoL8jk6aWsC4J */
