--- a/public/style.css
+++ b/public/style.css
@@ -711,3 +711,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2023-08-05T11:22:59 – jgMpzJgdX1l5KkTDpbM7 */
 /* 2023-10-28T03:59:26 – UOcvO4SvipSz9Thd3xAN */
 /* 2024-01-29T05:28:36 – D1j7HwVmXcAnZqsyTUGI */
+/* 2024-09-26T12:14:02 – r0MGOdNZ7rmrjm4Y7Pdc */
