--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,3 +24,4 @@
 /* 2021-09-26T07:47:07 – AP9Y5QoPavOU44GMN69J */
 /* 2021-10-24T09:54:54 – KkzBLYeUy4QIP2bK0Rpc */
 /* 2023-11-09T07:07:21 – GrpfuzEcTwh8ZH8izgA7 */
+/* 2024-10-18T07:43:13 – fSklFs6aUf0rqaMKyE3I */
