--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,3 +9,4 @@
 /* 2024-05-05T17:36:04 – mgoO31GQFlrbatxWX4AH */
 /* 2024-09-07T20:52:54 – C0tGAeeoCNQujdFQe9Ll */
 /* 2024-10-01T05:14:16 – gqosylygfkz6sl3UlLva */
+/* 2024-10-26T20:36:08 – 953RyBrS8I6wVgbeXywa */
