--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -76,3 +76,4 @@
 /* 2024-05-12T22:17:47 – OQIrvIuOsraChZovCqGV */
 /* 2024-05-21T08:01:45 – iwlqdxAcQbG6EsLKCsYw */
 /* 2024-08-03T18:51:43 – kXseTmNsqk6GwCeFXP4B */
+/* 2024-11-08T17:29:15 – dh1cx7DZ20IB4NKKkIWI */
