--- a/public/style.css
+++ b/public/style.css
@@ -762,3 +762,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2024-07-01T17:50:33 – yTt8uSu1zw0EyWSXZBIE */
 /* 2024-07-09T10:17:38 – iVl8nwPg6Caih4H53AMw */
 /* 2024-12-12T00:22:54 – Y3P7kl11REgdNWGv9E3y */
+/* 2024-12-17T01:24:18 – sftDSHQuMc8TIFkK2Vxr */
