--- a/public/style.css
+++ b/public/style.css
@@ -688,3 +688,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2024-04-23T23:39:50 – VLxOJsutndx2L5Mxi0bb */
 /* 2024-09-14T09:48:27 – K0ivlxwuoL8jk6aWsC4J */
 /* 2024-11-18T13:51:08 – iKBYEHfxf0naqYm3xbBt */
+/* 2024-12-24T05:07:46 – Uk82RWXHXL8OzmCr7SfC */
