--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -78,3 +78,4 @@
 /* 2024-08-03T18:51:43 – kXseTmNsqk6GwCeFXP4B */
 /* 2024-11-08T17:29:15 – dh1cx7DZ20IB4NKKkIWI */
 /* 2024-11-29T22:17:42 – YOFql36U2xCr5kLgdWGe */
+/* 2025-01-02T18:17:26 – n6WyI5L2X9JZMxHWH2Dc */
