--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,3 +149,4 @@
 /* 2024-08-13T11:22:48 – 9od9QKYn5UVP8oAoSUmR */
 /* 2024-08-26T11:52:15 – YzqkBBBiRHlxMrTmou9M */
 /* 2024-09-01T15:17:56 – WRImWz8EV0b2jPqQVIms */
+/* 2025-03-08T23:57:18 – QWGODviQC4HD7UrkzhJF */
