--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,3 +150,4 @@
 /* 2024-08-26T11:52:15 – YzqkBBBiRHlxMrTmou9M */
 /* 2024-09-01T15:17:56 – WRImWz8EV0b2jPqQVIms */
 /* 2025-03-08T23:57:18 – QWGODviQC4HD7UrkzhJF */
+/* 2025-03-12T07:11:55 – jJI9D0fWidKGJWLYSkim */
