--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,3 +101,4 @@
 /* 2022-05-02T06:30:04 – u10cHxmPSXBD7dcn0jQg */
 /* 2023-09-19T19:29:33 – apOm5gopb6LwD8uyPAk6 */
 /* 2024-09-27T09:39:56 – r3wfcQObXcbYJJ7zIibs */
+/* 2025-04-22T19:18:52 – O6KR9d7gQsv9CurmsxNC */
